k8s/apps/logging/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: logging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`loki.k8s.k8s.vicio.ovh`)  # UPDATE THIS
      kind: Rule
      services:
        - name: loki-gateway
          port: 80
  tls:
    certResolver: default
    domains:
      - main: loki.k8s.k8s.vicio.ovh  # UPDATE THIS
